RESOLVED FIXED132792
ASSERTION FAILED: !m_connection under RunJavaScriptAlert
https://bugs.webkit.org/show_bug.cgi?id=132792
Summary ASSERTION FAILED: !m_connection under RunJavaScriptAlert
Anders Carlsson
Reported 2014-05-10 17:13:19 PDT
ASSERTION FAILED: !m_connection under RunJavaScriptAlert
Attachments
Patch (6.37 KB, patch)
2014-05-10 17:15 PDT, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2014-05-10 17:15:16 PDT
WebKit Commit Bot
Comment 2 2014-05-10 17:17:39 PDT
Attachment 231243 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/Cocoa/UIDelegate.mm:198: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/Cocoa/UIDelegate.mm:218: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2014-05-10 17:30:49 PDT
Note You need to log in before you can comment on or make changes to this bug.